build/tree-sitter-c-sharp/corpus/contextual-keywords.txt
=======================================
From keyword can be a variable
=======================================

var a = Assert.Range(from, to);

---

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (implicit_type)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (invocation_expression
              (member_access_expression (identifier) (identifier))
              (argument_list (argument (identifier)) (argument (identifier)))))))))) 
